# rag-cli

./: .env.example  .gitignore  docker-compose.yml  main.py  pyproject.toml
src/: chunker.py  cli.py  config.py  embedder.py  generator.py  indexer.py  parser.py  rag.py  reranker.py  retriever.py
