[project]
name = "rag-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.5.9",
    "langchain-text-splitters>=1.1.2",
    "openai>=2.38.0",
    "pydantic-settings>=2.14.1",
    "pymupdf4llm>=1.27.2.3",
    "questionary>=2.1.1",
    "rich>=15.0.0",
    "sentence-transformers>=5.5.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]

[project.scripts]
rag = "src.cli:main"